--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=false
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\fahim\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
