--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.jar=${dist.dir}/ShopManagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout-RELEASE121.jar=Dependencies\\AbsoluteLayout-RELEASE121.jar
 file.reference.activation-1.1.jar=Dependencies\\activation-1.1.jar
 file.reference.bouncycastle-jce-jdk13-112.jar=Dependencies\\bouncycastle-jce-jdk13-112.jar
 file.reference.commons-codec-1.14.jar=Dependencies\\commons-codec-1.14.jar
@@ -60,7 +61,8 @@ javac.classpath=\
     ${file.reference.jfreechart.jar}:\
     ${file.reference.mail.jar}:\
     ${file.reference.mysql-connector-java-5.1.48.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.AbsoluteLayout-RELEASE121.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
